--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=Nexus Gaming
 
 server.port=8090
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dbnexusgame
+
+spring.datasource.username=root
+spring.datasource.password=mysql
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#Mostrar las sentencias sql
+spring.jpa.show-sql=true 
+#Formaatear las sentencias en formato SQL
+spring.jpa.properties.hibernate.format_sql=true
