--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/dbnexusgame
 spring.datasource.username=root
 spring.datasource.password=mysql
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 #Mostrar las sentencias sql
 spring.jpa.show-sql=true 
